# archetype

./: Makefile  README.md  setup.cfg
archetype/: __init__.py  example0.py
archetype/modules_1/: __init__.py
notebooks/: package_test.ipynb
